update views.py, urls.py, aialieneer an setting up index and layout.html

--- a/Al_ALIENEER/aialieneer/templates/aialieneer/layout.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/layout.html
@@ -63,8 +63,8 @@
 
                         <div class="header-bar-menu">
                             <ul class="flex justify-content-center align-items-center py-2 pt-md-0">
-                                <li><a href="register">Register</a></li>
-                                <li><a href="login">Login</a></li>
+                                <li><a href="signup.html">Signup</a></li>
+                                <li><a href="login.html">Login</a></li>
                             </ul>
                         </div><!-- .header-bar-menu -->
                     </div><!-- .col -->
