--- a/Al_ALIENEER/aialieneer/templates/aialieneer/layout.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    {% load static %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -109,9 +110,7 @@
     </header><!-- .site-header -->
     <!-- Header End -->
 
-    {% block body %}
-
-    {% endblock %}
+    
 
     <!-- Footer Statrt -->
     <footer class="site-footer">
