create base2.html and edit about, blog, contact, course, dashboards, forgot-password, login, signup.html files

--- a/Al_ALIENEER/aialieneer/templates/aialieneer/about.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'layout.html' %}
+{% extends 'aialieneer/base.html' %}
 {% block body %}
 <!-- about-page -->
 
@@ -12,7 +12,8 @@
                     <div class="row">
                         <div class="col-12">
                             <header class="entry-header">
-                                <h1>About</h1>
+                                <!-- <h1>About</h1> -->
+                                {% block title %}  About  {% endblock %}
                             </header><!-- .entry-header -->
                         </div><!-- .col -->
                     </div><!-- .row -->
@@ -25,7 +26,7 @@
                 <div class="col-12">
                     <div class="breadcrumbs">
                         <ul class="flex flex-wrap align-items-center p-0 m-0">
-                            <li><a href="{{url_for('index')}}"><i class="fa fa-home"></i> Home</a></li>
+                            <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
                             <li>About</li>
                         </ul>
                     </div><!-- .breadcrumbs -->
@@ -116,10 +117,10 @@
                 <div class="col-12 col-lg-6 flex align-content-center mt-5 mt-lg-0">
                     <div class="ezuca-video position-relative">
                         <div class="video-play-btn position-absolute">
-                            <img src="{{url_for('static', filename = 'images/video-icon.png')}}" alt="Video Play">
+                            <img src="{% static 'aialieneer/images/video-icon.png' %}" alt="Video Play">
                         </div><!-- .video-play-btn -->
 
-                        <img src="{{url_for('static', filename = 'images/video-screenshot.png')}}" alt="">
+                        <img src="{% static 'aialieneer/images/video-screenshot.png' %}" alt="">
                     </div><!-- .ezuca-video -->
                 </div><!-- .col -->
             </div><!-- .row -->
@@ -135,7 +136,7 @@
                         <div class="row">
                             <div class="col-12 col-lg-6 order-2 order-lg-1 flex align-items-center mt-5 mt-lg-0">
                                 <figure class="user-avatar">
-                                    <img src="{{url_for('static', filename = 'images/user-1.jpg')}}" alt="">
+                                    <img src="{% static 'aialieneer/images/user-1.jpg' %}" alt="">
                                 </figure><!-- .user-avatar -->
                             </div><!-- .col -->
 
@@ -157,7 +158,7 @@
                         <div class="row">
                             <div class="col-12 col-lg-6 order-2 order-lg-1 flex align-items-center mt-5 mt-lg-0">
                                 <figure class="user-avatar">
-                                    <img src="{{url_for('static',filename = 'images/user-2.jpg')}}" alt="">
+                                    <img src="{% static 'aialieneer/images/user-2.jpg' %}" alt="">
                                 </figure><!-- .user-avatar -->
                             </div><!-- .col -->
 
@@ -179,7 +180,7 @@
                         <div class="row">
                             <div class="col-12 col-lg-6 flex order-2 order-lg-1 align-items-center mt-5 mt-lg-0">
                                 <figure class="user-avatar">
-                                    <img src="{{url_for('static', filename = 'images/user-3.jpg')}}" alt="">
+                                    <img src="{% static 'aialieneer/images/user-3.jpg' %}" alt="">
                                 </figure><!-- .user-avatar -->
                             </div><!-- .col -->
 
@@ -218,7 +219,7 @@
 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="{{url_for('static', filename = 'images/team-1.jpg')}}" alt="">
+                    <img src="{% static 'aialieneer/images/team-1.jpg' %}" alt="">
 
                     <h3>Mr. John Wick</h3>
                     <h4>Materials</h4>
@@ -233,7 +234,7 @@
 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="{{url_for('static', filename = 'images/team-2.jpg')}}" alt="">
+                    <img src="{% static 'aialieneer/images/team-2.jpg' %} " alt="">
 
                     <h3>Michelle Golden</h3>
                     <h4>WordPress</h4>
@@ -248,7 +249,7 @@
 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="{{url_for('static', filename = 'images/team-3.jpg')}}" alt="">
+                    <img src="{% static 'aialieneer/images/team-3.jpg' %}" alt="">
 
                     <h3>Ms. Lucius</h3>
                     <h4>Data Analysis</h4>
@@ -263,7 +264,7 @@
 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="{{url_for('static', filename = 'images/team-4.jpg')}}" alt="">
+                    <img src="{% static 'aialieneer/images/team-4.jpg' %}" alt="">
 
                     <h3>Ms. Lara Croft </h3>
                     <h4>HTML CSS</h4>
@@ -277,34 +278,6 @@
             </div><!-- .col -->
         </div><!-- .row -->
     </div><!-- .container -->
-
-    <div class="clients-logo">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 flex flex-wrap justify-content-center justify-content-lg-between align-items-center">
-                    <div class="logo-wrap">
-                        <img src="{{url_for('static', filename = 'images/logo-1.png')}}" alt="">
-                    </div><!-- .logo-wrap -->
-
-                    <div class="logo-wrap">
-                        <img src="{{url_for('static', filename = 'images/logo-2.png')}}" alt="">
-                    </div><!-- .logo-wrap -->
-
-                    <div class="logo-wrap">
-                        <img src="{{url_for('static', filename = 'images/logo-3.png')}}" alt="">
-                    </div><!-- .logo-wrap -->
-
-                    <div class="logo-wrap">
-                        <img src="{{url_for('static', filename = 'images/logo-4.png')}}" alt="">
-                    </div><!-- .logo-wrap -->
-
-                    <div class="logo-wrap">
-                        <img src="{{url_for('static', filename = 'images/logo-5.png')}}" alt="">
-                    </div><!-- .logo-wrap -->
-                </div><!-- .col -->
-            </div><!-- .row -->
-        </div><!-- .container -->
-    </div><!-- .clients-logo -->
 
 </body>
 {% endblock %}
