--- a/Al_ALIENEER/aialieneer/templates/aialieneer/base.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/base.html
@@ -117,6 +117,37 @@
     </header><!-- .site-header -->
     <!-- Header End -->
     {% endblock %}
+
+
+    {% block logo %}
+    <div class="clients-logo">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 flex flex-wrap justify-content-center justify-content-lg-between align-items-center">
+                    <div class="logo-wrap">
+                        <img src="{% static 'aialieneer/images/logo-1.png' %}" alt="">
+                    </div><!-- .logo-wrap -->
+
+                    <div class="logo-wrap">
+                        <img src="{% static 'aialieneer/images/logo-2.png' %}" alt="">
+                    </div><!-- .logo-wrap -->
+
+                    <div class="logo-wrap">
+                        <img src="{% static 'aialieneer/images/logo-3.png' %}" alt="">
+                    </div><!-- .logo-wrap -->
+
+                    <div class="logo-wrap">
+                        <img src="{% static 'aialieneer/images/logo-4.png' %}" alt="">
+                    </div><!-- .logo-wrap -->
+
+                    <div class="logo-wrap">
+                        <img src="{% static 'aialieneer/images/logo-5.png' %}" alt="">
+                    </div><!-- .logo-wrap -->
+                </div><!-- .col -->
+            </div><!-- .row -->
+        </div><!-- .container -->
+    </div><!-- .clients-logo -->
+    {% endblock %}
     
     {% block foot %}
     <!-- Footer Statrt -->
