--- a/Al_ALIENEER/aialieneer/templates/aialieneer/blog.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/blog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'layout.html' %}
+{% extends 'aialieneer/base.html' %}
 {% block body %}
 <body class="blog-page">
     <div class="page-header">
@@ -9,7 +9,8 @@
                 <div class="row">
                     <div class="col-12">
                         <header class="entry-header">
-                            <h1>BLOG</h1>
+                            <!-- <h1>BLOG</h1> -->
+                            {% block title %}  Blog  {% endblock %}
                         </header><!-- .entry-header -->
                     </div><!-- .col -->
                 </div><!-- .row -->
@@ -22,7 +23,7 @@
             <div class="col-12">
                 <div class="breadcrumbs">
                     <ul class="flex flex-wrap align-items-center p-0 m-0">
-                        <li><a href="{{url_for('index')}}"><i class="fa fa-home"></i> Home</a></li>
+                        <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
                         <li>Blog</li>
                     </ul>
                 </div><!-- .breadcrumbs -->
@@ -36,7 +37,7 @@
                         <div class="col-12 col-md-6 px-25">
                             <div class="blog-post-content">
                                 <figure class="blog-post-thumbnail position-relative m-0">
-                                    <a href="{{url_for('single_courses')}}"><img src="{{url_for('static', filename = 'images/b-1.jpg')}}" alt=""></a>
+                                    <a href="single_courses"><img src="{% static 'aialieneer/images/b-1.jpg' %}" alt=""></a>
 
                                     <div class="posted-date position-absolute">
                                         <div class="day">23</div>
@@ -65,7 +66,7 @@
                         <div class="col-12 col-md-6 px-25">
                             <div class="blog-post-content">
                                 <figure class="blog-post-thumbnail position-relative m-0">
-                                    <a href="{{url_for('single_courses')}}"><img src="{{url_for('static', filename = 'images/b-2.jpg')}}" alt=""></a>
+                                    <a href="single_courses"><img src="{% static 'aialieneer/images/b-2.jpg' %}" alt=""></a>
 
                                     <div class="posted-date position-absolute">
                                         <div class="day">23</div>
@@ -94,7 +95,7 @@
                         <div class="col-12 col-md-6 px-25">
                             <div class="blog-post-content">
                                 <figure class="blog-post-thumbnail position-relative m-0">
-                                    <a href="{{url_for('single_courses')}}"><img src="{{url_for('static', filename = 'images/b-3.jpg')}}" alt=""></a>
+                                    <a href="single_courses"><img src="{% static 'aialieneer/images/b-3.jpg' %}" alt=""></a>
 
                                     <div class="posted-date position-absolute">
                                         <div class="day">23</div>
@@ -123,7 +124,7 @@
                         <div class="col-12 col-md-6 px-25">
                             <div class="blog-post-content">
                                 <figure class="blog-post-thumbnail position-relative m-0">
-                                    <a href="{{url_for('single_courses')}}"><img src="{{url_for('static', filename = 'images/b-4.jpg')}}" alt=""></a>
+                                    <a href="single_courses"><img src="{% static 'aialieneer/images/b-4.jpg' %}" alt=""></a>
 
                                     <div class="posted-date position-absolute">
                                         <div class="day">23</div>
@@ -152,7 +153,7 @@
                         <div class="col-12 col-md-6 px-25">
                             <div class="blog-post-content">
                                 <figure class="blog-post-thumbnail position-relative m-0">
-                                    <a href="{{url_for('single_courses')}}"><img src="{{url_for('static', filename = 'images/b-5.jpg')}}" alt=""></a>
+                                    <a href="single_courses"><img src="{% static 'aialieneer/images/b-5.jpg' %}" alt=""></a>
 
                                     <div class="posted-date position-absolute">
                                         <div class="day">23</div>
@@ -181,7 +182,7 @@
                         <div class="col-12 col-md-6 px-25">
                             <div class="blog-post-content">
                                 <figure class="blog-post-thumbnail position-relative m-0">
-                                    <a href="{{url_for('single_courses')}}"><img src="{{url_for('static', filename = 'images/b-6.jpg')}}" alt=""></a>
+                                    <a href="single_courses"><img src="{% static 'aialieneer/images/b-6.jpg' %}" alt=""></a>
 
                                     <div class="posted-date position-absolute">
                                         <div class="day">23</div>
@@ -263,7 +264,7 @@
 
                         <ul class="p-0 m-0">
                             <li class="flex flex-wrap justify-content-between align-items-start">
-                                <img src="{{url_for('static', filename = 'images/t-1.jpg')}}" alt="">
+                                <img src="{% static 'aialieneer/images/t-1.jpg' %}" alt="">
 
                                 <div class="content-wrap">
                                     <h3><a href="#">The Complete Financial Analyst Training</a></h3>
@@ -273,7 +274,7 @@
                             </li>
 
                             <li class="flex flex-wrap justify-content-between align-items-start">
-                                <img src="{{url_for('static', filename = 'images/t-2.jpg')}}" alt="">
+                                <img src="{% static 'aialieneer/images/t-2.jpg' %}" alt="">
 
                                 <div class="content-wrap">
                                     <h3><a href="#">Complete Java
@@ -284,7 +285,7 @@
                             </li>
 
                             <li class="flex flex-wrap justify-content-between align-items-start">
-                                <img src="{{url_for('static', filename = 'images/t-3.jpg')}}" alt="">
+                                <img src="{% static 'aialieneer/images/t-3.jpg' %}" alt="">
 
                                 <div class="content-wrap">
                                     <h3><a href="#">The Complete Digital Marketing Course</a></h3>
@@ -294,7 +295,7 @@
                             </li>
 
                             <li class="flex flex-wrap justify-content-between align-items-start">
-                                <img src="{{url_for('static', filename = 'images/t-4.jpg')}}" alt="">
+                                <img src="{% static 'aialieneer/images/t-4.jpg' %}" alt="">
 
                                 <div class="content-wrap">
                                     <h3><a href="#">Photoshop CC 2018
@@ -307,7 +308,7 @@
                     </div><!-- .latest-courses -->
 
                     <div class="ads">
-                        <img src="{{url_for('static', filename = 'images/ads.jpg')}}" alt="">
+                        <img src="{% static 'aialieneer/images/ads.jpg' %}" alt="">
                     </div><!-- .ads -->
 
                     <div class="popular-tags">
@@ -326,34 +327,6 @@
             </div><!-- .col -->
         </div><!-- .row -->
     </div><!-- .container -->
-
-    <div class="clients-logo">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 flex flex-wrap justify-content-center justify-content-lg-between align-items-center">
-                    <div class="logo-wrap">
-                        <img src="{{url_for('static', filename = 'images/logo-1.png')}}" alt="">
-                    </div><!-- .logo-wrap -->
-
-                    <div class="logo-wrap">
-                        <img src="{{url_for('static', filename = 'images/logo-2.png')}}" alt="">
-                    </div><!-- .logo-wrap -->
-
-                    <div class="logo-wrap">
-                        <img src="{{url_for('static', filename = 'images/logo-3.png')}}" alt="">
-                    </div><!-- .logo-wrap -->
-
-                    <div class="logo-wrap">
-                        <img src="{{url_for('static', filename = 'images/logo-4.png')}}" alt="">
-                    </div><!-- .logo-wrap -->
-
-                    <div class="logo-wrap">
-                        <img src="{{url_for('static', filename = 'images/logo-5.png')}}" alt="">
-                    </div><!-- .logo-wrap -->
-                </div><!-- .col -->
-            </div><!-- .row -->
-        </div><!-- .container -->
-    </div><!-- .clients-logo -->
 
 </body>
 {% endblock %}
