--- a/Al_ALIENEER/aialieneer/templates/aialieneer/signup.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/signup.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+{% extends 'aialieneer/base2.html' %}
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+{% block title %}  Signup  {% endblock %}
 
-    <title>Register</title>
-
-    <!-- Custom fonts for this template-->
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/bootstrap.min.css')}}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/ai-eng-2.min.css')}}">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-
-    <!-- Custom styles for this template-->
-    <link href="{{url_for('static', filename = 'css/ai-eng-2.min.css')}}" rel="stylesheet">
-
-</head>
+{% block body %}
 
 <body class="bg-gradient-primary">
-{% block content %}
     <div class="container">
 
         <div class="card o-hidden border-0 shadow-lg my-5">
@@ -62,23 +45,23 @@
                                             id="rPassword" placeholder="Repeat Password" required>
                                     </div>
                                 </div>
-                                <a href="{{url_for('login')}}" class="btn btn-primary btn-user btn-block">
+                                <a href="login" class="btn btn-primary btn-user btn-block">
                                     Register Account
                                 </a>
                                 <hr>
-                                <a href="{{url_for('login')}}" class="btn btn-google btn-user btn-block">
+                                <a href="login" class="btn btn-google btn-user btn-block">
                                     <i class="fab fa-google fa-fw"></i> Register with Google
                                 </a>
-                                <a href="{{url_for('login')}}" class="btn btn-facebook btn-user btn-block">
+                                <a href="login" class="btn btn-facebook btn-user btn-block">
                                     <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
                                 </a>
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="{{url_for('forgot_password')}}">Forgot Password?</a>
+                                <a class="small" href="forgot_password">Forgot Password?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" href="{{url_for('login')}}">Already have an account? Login!</a>
+                                <a class="small" href="login">Already have an account? Login!</a>
                             </div>
                         </div>
                     </div>
@@ -87,19 +70,6 @@
         </div>
 
     </div>
-{% endblock %}
-
-    <!-- Bootstrap core JavaScript-->
-    <script src="{{url_for('static', filename = 'vendor/jquery/jquery.min.js')}}"></script>
-    <script src="{{url_for('static', filename = 'vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="{{url_for('static', filename = 'vendor/jquery-easing/jquery.easing.min.js')}}"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="{{url_for('static', filename = 'js/ai-eng-2.min.js')}}"></script>
-    <script src="{{url_for('static', filename = 'js/scripts.js')}}"></script>
-
 </body>
-
+{% endblock %}
 </html>
