--- a/Al_ALIENEER/aialieneer/templates/aialieneer/base2.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/base2.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
+{% load static%}
 <html lang="en">
-    {% extends 'aialieneer/base2.html' %}
+{% block head %}
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
+    <!-- <title>Login</title> -->
     {% block title %}  Login  {% endblock %}
 
-{% block body %}
+    <!-- Custom fonts for this template-->
+    <link rel="stylesheet" href="{% static 'aialieneer/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'aialieneer/css/ai-eng-2.min.css' %}">
+    <link href="{static 'aialieneer/vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+    <link href="{{url_for('static', filename = 'css/ai-eng-2.min.css')}}" rel="stylesheet">
+    {% block extra_css %}{% endblock %}
+</head>
+{% endblock %}
+
+
 <body class="bg-gradient-primary">
+
     <div class="container">
 
         <!-- Outer Row -->
@@ -41,23 +64,23 @@
                                                     Me</label>
                                             </div>
                                         </div>
-                                        <a href="login" class="btn btn-primary btn-user btn-block">
+                                        <a href="{{url_for('login')}}" class="btn btn-primary btn-user btn-block">
                                             Login
                                         </a>
                                         <hr>
-                                        <a href="login" class="btn btn-google btn-user btn-block">
+                                        <a href="{{url_for('login')}}" class="btn btn-google btn-user btn-block">
                                             <i class="fab fa-google fa-fw"></i> Login with Google
                                         </a>
-                                        <a href="login" class="btn btn-facebook btn-user btn-block">
+                                        <a href="{{url_for('login')}}" class="btn btn-facebook btn-user btn-block">
                                             <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
                                         </a>
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="forgot_password">Forgot Password?</a>
+                                        <a class="small" href="{{url_for('forgot_password')}}">Forgot Password?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="signup">Create an Account!</a>
+                                        <a class="small" href="{{url_for('register')}}">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
@@ -70,6 +93,25 @@
         </div>
 
     </div>
+    
+
+    <!-- Bootstrap core JavaScript-->
+    <script src="{% static 'aialieneer/vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'aialieneer/vendor/jquery/bootstrap.bundle.min.js' %}"></script>
+
+    <!-- Core plugin JavaScript-->
+    <script src="{% static 'vendor/jquery/jquery.easing.min.js' %}"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script src="{% static'aialieneer/js/ai-eng-2.min.js' %}"></script>
+    
+    <!-- Page level plugins -->
+    <script src="{{url_for('static', filename = 'vendor/chart.js/Chart.min.js')}}"></script>
+
+    <!-- Page level custom scripts -->
+    <script src="{{url_for('static', filename = 'js/demo/chart-area-demo.js')}}"></script>
+    <script src="{{url_for('static', filename = 'js/demo/chart-pie-demo.js')}}"></script>
+
 </body>
 {% endblock %}
 </html>
