--- a/Al_ALIENEER/aialieneer/templates/aialieneer/dashboard.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/dashboard.html
@@ -1,27 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+{% extends 'aialieneer/base2.html' %}
 
-<head>
+{% block title %}  AI_ALIENEER  {% endblock %}
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>AI ENGINEER - Dashboard</title>
-
-    <!-- Custom fonts for this template-->
-    <link href="{{url_for('static', filename = 'vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-
-    <!-- Custom styles for this template-->
-    <link href="{{url_for('static', filename = 'css/ai-eng-2.min.css')}}" rel="stylesheet">
-
-</head>
-
+{% block body %}
 <body id="page-top">
 
     <!-- Page Wrapper -->
@@ -31,11 +14,11 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{url_for('dashboard')}}">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="dashboard">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">AI ENGINEER Admin <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3">AI ALIENEER Admin <sup>2</sup></div>
             </a>
 
             <!-- Divider -->
@@ -43,7 +26,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="{{url_for('dashboard')}}">
+                <a class="nav-link" href="dashboard">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -66,8 +49,8 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="{{url_for('buttons')}}">Buttons</a>
-                        <a class="collapse-item" href="{{url_for('cards')}}">Cards</a>
+                        <a class="collapse-item" href="buttons">Buttons</a>
+                        <a class="collapse-item" href="cards">Cards</a>
                     </div>
                 </div>
             </li>
@@ -83,10 +66,10 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="{{url_for('color')}}">Colors</a>
-                        <a class="collapse-item" href="{{url_for('border')}}">Borders</a>
-                        <a class="collapse-item" href="{{url_for('animation')}}">Animations</a>
-                        <a class="collapse-item" href="{{url_for('other')}}">Other</a>
+                        <a class="collapse-item" href="color">Colors</a>
+                        <a class="collapse-item" href="border">Borders</a>
+                        <a class="collapse-item" href="animation">Animations</a>
+                        <a class="collapse-item" href="other">Other</a>
                     </div>
                 </div>
             </li>
@@ -109,27 +92,27 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="{{url_for('login')}}">Login</a>
-                        <a class="collapse-item" href="{{url_for('register')}}">Register</a>
-                        <a class="collapse-item" href="{{url_for('forgot_password')}}">Forgot Password</a>
+                        <a class="collapse-item" href="login">Login</a>
+                        <a class="collapse-item" href="register">Register</a>
+                        <a class="collapse-item" href="forgot_password">Forgot Password</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="{{url_for('page_not_found')}}">404 Page</a>
-                        <a class="collapse-item" href="{{url_for('blank')}}">Blank Page</a>
+                        <a class="collapse-item" href="page_not_found">404 Page</a>
+                        <a class="collapse-item" href="blank">Blank Page</a>
                     </div>
                 </div>
             </li>
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="{{url_for('charts')}}">
+                <a class="nav-link" href="charts">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Charts</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="{{url_for('tables')}}">
+                <a class="nav-link" href="tables">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Tables</span></a>
             </li>
@@ -144,7 +127,7 @@
 
             <!-- Sidebar Message -->
             <div class="sidebar-card">
-                <img class="sidebar-card-illustration mb-2" src="{{url_for('static', filename = 'images/undraw_rocket.svg')}}" alt="">
+                <img class="sidebar-card-illustration mb-2" src="{% static 'aialieneer/images/undraw_rocket.svg' %}" alt="">
                 <p class="text-center mb-2"><strong>AI Admin Pro</strong> is packed with premium features, components, and more!</p>
                 <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/ai-admin-pro">Upgrade to Pro!</a>
             </div>
@@ -274,7 +257,7 @@
                                 </h6>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                     <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="{{url_for('static', filename = 'images/undraw_profile_1.svg')}}"
+                                        <img class="rounded-circle" src="{% static 'aialieneer/images/undraw_profile_1.svg' %}"
                                             alt="">
                                         <div class="status-indicator bg-success"></div>
                                     </div>
@@ -286,7 +269,7 @@
                                 </a>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                     <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="{{url_for('static', filename = 'images/undraw_profile_2.svg')}}"
+                                        <img class="rounded-circle" src="{% static 'aialieneer/images/undraw_profile_2.svg' %}"
                                             alt="">
                                         <div class="status-indicator"></div>
                                     </div>
@@ -298,7 +281,7 @@
                                 </a>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                     <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="{{url_for('static', filename = 'images/undraw_profile_3.svg')}}"
+                                        <img class="rounded-circle" src="{% static 'aialieneer/images/undraw_profile_3.svg' %}"
                                             alt="">
                                         <div class="status-indicator bg-warning"></div>
                                     </div>
@@ -332,7 +315,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
                                 <img class="img-profile rounded-circle"
-                                    src="{{url_for('static', filename = 'images/undraw_profile.svg')}}">
+                                    src="{% static 'aialieneer/images/undraw_profile.svg' %}">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -350,7 +333,7 @@
                                     Activity Log
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                <a class="dropdown-item" href="index" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Logout
                                 </a>
@@ -662,7 +645,7 @@
                                 <div class="card-body">
                                     <div class="text-center">
                                         <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
-                                            src="img/undraw_posting_photo.svg" alt="">
+                                            src="{% static 'aialieneer/images/undraw_posting_photo.svg' %}" alt="">
                                     </div>
                                     <p>Add some quality, svg illustrations to your project courtesy of <a
                                             target="_blank" rel="nofollow" href="https://undraw.co/">unDraw</a>, a
@@ -731,29 +714,12 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="{{url_for('login')}}">Logout</a>
+                    <a class="btn btn-primary" href="login">Logout</a>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="{{url_for('static', filename = 'vendor/jquery/jquery.min.js')}}"></script>
-    <script src="{{url_for('static', filename = 'vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="{{url_for('static', filename = 'vendor/jquery-easing/jquery.easing.min.js')}}"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="{{url_for('static', filename = 'js/ai-eng-2.min.js')}}"></script>
-
-    <!-- Page level plugins -->
-    <script src="{{url_for('static', filename = 'vendor/chart.js/Chart.min.js')}}"></script>
-
-    <!-- Page level custom scripts -->
-    <script src="{{url_for('static', filename = 'js/chart-area-demo.js')}}"></script>
-    <script src="{{url_for('static', filename = 'js/chart-pie-demo.js')}}"></script>
-
 </body>
-
+{% endblock %}
 </html>
